@@ -7,7 +7,6 @@ import de.hybris.platform.basecommerce.enums.ConsignmentStatus;
 import de.hybris.platform.core.enums.OrderStatus;
 import de.hybris.platform.core.model.order.AbstractOrderEntryModel;
 import de.hybris.platform.core.model.order.OrderModel;
-import de.hybris.platform.core.model.order.delivery.DeliveryModeModel;
 import de.hybris.platform.core.model.user.AddressModel;
 import de.hybris.platform.core.model.user.UserModel;
 import de.hybris.platform.servicelayer.exceptions.ModelSavingException;
@@ -225,7 +224,7 @@ public class MplDeliveryAddressServiceImpl implements MplDeliveryAddressService
 							.getMplDeliveryAddressReportModelByOrderId(orderModel.getCode());
 					if (mplDeliveryAddressInfoModel != null)
 					{
-						mplDeliveryAddressInfoModel.setChangeDeliveryTotalRequests(new Integer(
+						mplDeliveryAddressInfoModel.setChangeDeliveryTotalRequests(Integer.valueOf(
 								mplDeliveryAddressInfoModel.getChangeDeliveryTotalRequests().intValue() + 1));
 						modelService.save(mplDeliveryAddressInfoModel);
 					}
@@ -269,12 +268,12 @@ public class MplDeliveryAddressServiceImpl implements MplDeliveryAddressService
 					.getMplDeliveryAddressReportModelByOrderId(orderModel.getCode());
 			if (mplDeliveryAddressInfoModel != null)
 			{
-				mplDeliveryAddressInfoModel.setChangeDeliveryTotalRequests(new Integer(mplDeliveryAddressInfoModel
+				mplDeliveryAddressInfoModel.setChangeDeliveryTotalRequests(Integer.valueOf(mplDeliveryAddressInfoModel
 						.getChangeDeliveryTotalRequests().intValue() + 1));
 
 				if (mplDeliveryAddressInfoModel.getChangeDeliveryRejectsCount() != null)
 				{
-					mplDeliveryAddressInfoModel.setChangeDeliveryRejectsCount(new Integer(mplDeliveryAddressInfoModel
+					mplDeliveryAddressInfoModel.setChangeDeliveryRejectsCount(Integer.valueOf(mplDeliveryAddressInfoModel
 							.getChangeDeliveryRejectsCount().intValue() + 1));
 				}
 				else
